@startuml  

class Pedido{
    id: Long
    data: LocalDateTime 
}

class ItemPedido{
    id: Long 
    quantidade: Integer
    preco: Double
}


class Produto{
    id: Long
    nome: String
    descricao: String
    preco: Double
    estoque: Integer
}

enum Categoria{
    + MECANICA
    + SUSPENSAO
    + DIRECAO
    + ESTETICA
    + ELETRICA
}

class Usuario{
    id: Long
    login: String 
    senha: String
}

enum Perfil{
    + USER
    + ADMIN
}

Produto "*" --> "1" Categoria

Usuario "*" --> "1" Perfil

ItemPedido  "*" --> "1"  Produto
Pedido "1" *--> "*" ItemPedido
Pedido "*" --> "1" Usuario